# maemo-tvout-control

./: Makefile.am  configure.ac
data/: Makefile.am  cptvout.desktop  tvout.schemas  tvout_status_menu_item.desktop
debian/: changelog  control  copyright  maemo-applet-tvout.install  maemo-tvout-control.install  rules  status-menu-applet-tvout.install  status-menu-applet-tvout.postinst
src/: Makefile.am  libcptvout.c  tvout-ctl.c  tvout-ctl.h  tvout-home-plugin.c  tvout_gconf_keys.h  tvout_status_menu_item.c  tvout_status_menu_item.h
