AC_PREREQ([2.61])
AC_INIT([maemo-tvout-control], [3.0])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC
AC_DISABLE_STATIC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(HILDON_DESKTOP, libhildondesktop-1)
AC_SUBST(HILDON_DESKTOP_CFLAGS)
AC_SUBST(HILDON_DESKTOP_LIBS)

PKG_CHECK_MODULES(HILDON_CONTROLPANEL, hildon-control-panel)
PKG_CHECK_MODULES(OSSO, libosso)
PKG_CHECK_MODULES(GCONF, gconf-2.0)
HILDON_CONTROLPANEL_CFLAGS="$HILDON_CONTROLPANEL_CFLAGS $OSSO_CFLAGS $GCONF_CFLAGS"
HILDON_CONTROLPANEL_LIBS="$HILDON_CONTROLPANEL_LIBS $OSSO_LIBS $GCONF_LIBS"
AC_SUBST(HILDON_CONTROLPANEL_CFLAGS)
AC_SUBST(HILDON_CONTROLPANEL_LIBS)

PKG_CHECK_MODULES(HAL, hal)
AC_SUBST(HAL_CFLAGS)
AC_SUBST(HAL_LIBS)

PKG_CHECK_MODULES(X11, x11)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

PKG_CHECK_MODULES(XV, xv)
AC_SUBST(XV_CFLAGS)
AC_SUBST(XV_LIBS)

HILDON_DESKTOP_ENTRY_DIR=`$PKG_CONFIG --variable=hildonhomedesktopentrydir libhildondesktop-1`
AC_SUBST(HILDON_DESKTOP_ENTRY_DIR)

HILDON_MENU_ENTRY_DIR=`$PKG_CONFIG --variable=hildonstatusmenudesktopentrydir libhildondesktop-1`
AC_SUBST(HILDON_MENU_ENTRY_DIR)

HILDON_CONTROLPANEL_LIB_DIR=`$PKG_CONFIG --variable=pluginlibdir hildon-control-panel`
AC_SUBST(HILDON_CONTROLPANEL_LIB_DIR)

HILDON_CONTROLPANEL_ENTRY_DIR=`$PKG_CONFIG --variable=plugindesktopentrydir hildon-control-panel`
AC_SUBST(HILDON_CONTROLPANEL_ENTRY_DIR)

HILDON_DESKTOP_LIB_DIR=`$PKG_CONFIG --variable=hildondesktoplibdir libhildondesktop-1`
AC_SUBST(HILDON_DESKTOP_LIB_DIR)

AC_OUTPUT(Makefile data/Makefile src/Makefile)
