statusmenudir = @prefix@/${HILDON_MENU_ENTRY_DIR}

statusmenu_DATA = tvout_status_menu_item.desktop

homeplugindir = @prefix@/${HILDON_HOME_ENTRY_DIR}

homeplugin_DATA = tvout-home-plugin.desktop

controlpaneldir = @prefix@/${CONTROLPANEL_ENTRY_DIR}

controlpanel_DATA = cptvout.desktop

schemasdir = @prefix@/share/gconf/schemas

schemas_DATA = tvout.schemas
