hildon_statusmenudir = @prefix@/${HILDON_MENU_ENTRY_DIR}

hildon_statusmenu_DATA = tvout_status_menu_item.desktop

hildon_desktopdir = @prefix@/${HILDON_DESKTOP_ENTRY_DIR}

hildon_desktop_DATA = tvout-home-plugin.desktop

hildon_controlpaneldir = @prefix@/${HILDON_CONTROLPANEL_ENTRY_DIR}

hildon_controlpanel_DATA = cptvout.desktop

gconf_schemasdir = @prefix@/share/gconf/schemas

gconf_schemas_DATA = tvout.schemas
