hildon_statusmenudir = $(HILDON_MENU_ENTRY_DIR)

dist_hildon_statusmenu_DATA = tvout_status_menu_item.desktop

hildon_desktopdir = $(HILDON_DESKTOP_ENTRY_DIR)

dist_hildon_desktop_DATA = tvout-home-plugin.desktop

hildon_controlpaneldir = $(HILDON_CONTROLPANEL_ENTRY_DIR)

dist_hildon_controlpanel_DATA = cptvout.desktop

gconf_schemasdir = $(GCONF_SCHEMA_FILE_DIR)

dist_gconf_schemas_DATA = tvout.schemas
